# visual-interpreter

./: .gitignore  CMakeLists.txt  InspectionFile.docx  README.md  These changes are very important..txt  index.html  package-lock.json  package.json  program.txt  program_tmp.txt  start_up.txt  test_program.js  trace.jsonl
.github/workflows/: webpack.yml
Tests/: CMakeLists.txt  T05.md  T09.md  T10.md  conformance_tests.cpp  example.spec.js  explanations.test.html  explanations.test.js  lexer_tests.cpp  parser_tests.cpp  runtime_tests.cpp  test-selenium.js  test_main.cpp  test_main.h  trace_tests.cpp  wasm_runner_tests.cpp
Tests/playwright/: 01-main-interface.spec.js  02-run-mode.spec.js  03-explain-only.spec.js  04-clear-editor.spec.js  05-history.spec.js  06-file-upload.spec.js
Tests/selenium/: 01-page-load.js  02-run-mode.js  03-explain-only.js
bridge/: package-lock.json  package.json  server.js
docs/testing/: T01.md  T02.md  T03.md  T04.md  T06.md  T07.md  T08.md
src/: main.cpp
src/ast/: ast.h
src/common/: loc.h
src/lexer/: lexer.cpp  lexer.h  token.h
src/parser/: parser.cpp  parser.h
src/runtime/: env.h  evaluator.cpp  evaluator.h  value.h
src/trace/: json_writer.cpp  json_writer.h  trace.cpp  trace.h
src/wasm/: bindings.cpp  runner.cpp  runner.h
test-results/tests-example-Interpreter-Run-Mode-test/: error-context.md
tests-fixtures/: sample.py
tracer/: run_tracer.js
ui/css/: badges.css  base.css  components.css  diagnostics.css  editor.css  explanations.css  guidedMode.css  history.css  languageSelect.css  layout.css  libraryInfo.css  lineNumbers.css  modals.css  output.css  responsive.css  templates.css  tutorial.css  ui.css
ui/js/: app.js  dom.js  draftStorage.js  editor.js  editorIndentation.js  explainOnly.js  explanations.js  (+10 more)
(+37 files in other folders)
